# jinja2-async-environment

./: .coverage  .coverage-ratchet.json  .crackerjack-hooks-updated  .gitignore  .mcp.json  .mcp.json.bak  .pre-commit-config-ai.yaml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  GEMINI.md  LICENSE  QWEN.md  README.md  README.md.backup  RULES.md  complexipy_results_2025_11_26__21:45:20.json  coverage.json  mypy.ini  pyproject.toml
.crackerjack/session/handoff/: session_handoff_20251026_031203.md
.oneiric_cache/: runtime_telemetry.json  workflow_checkpoints.sqlite
docs/: API_REFERENCE.md  FINAL_SUMMARY.md  IMMEDIATE_ACTION_PLAN.md  IMMEDIATE_FIXES.md  MIGRATION_GUIDE.md  QUALITY_FIXES_PLAN.md  REFACTORING_PLAN.md  SESSION_SUMMARY_2025-10-26.md  TEMPLATE_INHERITANCE_BUG_ANALYSIS.md  TEST_COVERAGE_IMPROVEMENTS.md  VISIT_BLOCK_ARCHITECTURE_ISSUE.md
jinja2_async_environment/: __init__.py  bccache.py  compiler.py  compiler_old.py  environment.py  loaders.py  loaders_old.py.backup  sandbox.py
jinja2_async_environment/.skylos/: cache.sqlite
jinja2_async_environment/caching/: __init__.py  manager.py  strategies.py  typed.py  unified.py
jinja2_async_environment/compiler_modules/: __init__.py  cache.py  codegen.py  dependencies.py  frame.py  loops.py  patterns.py
jinja2_async_environment/loaders/: __init__.py  base.py  choice.py  dict.py  filesystem.py  function.py  package.py
jinja2_async_environment/testing/: __init__.py  context.py  fixtures.py
tests/: BENCHMARK_BASELINE.md  ERROR_HANDLING_TESTS.md  OPTIMIZATION_RESULTS.md  PERFORMANCE_SUMMARY.md  TESTING_STRATEGY.md  TEST_STRATEGY_SUMMARY.md  test_async_environment.py  test_async_sandboxed_environment.py  test_bccache.py  test_bccache_additional.py  test_benchmarks.py  test_cache_advanced.py  test_cache_manager.py  test_caching_coverage.py  test_caching_strategies_coverage.py  test_choice_loader.py  test_choice_loader_comprehensive.py  test_compilation_cache.py  test_compiler.py  test_compiler_additional.py  test_compiler_advanced_coverage.py  test_compiler_coverage.py  test_compiler_e2e_coverage.py  test_compiler_uncovered.py  test_dependencies_resolver.py  test_dict_loader.py  test_e2e.py  test_edge_cases_coverage.py  test_environment.py  test_environment_additional.py  test_environment_coverage.py  test_environment_uncovered.py  test_escape_filter.py  test_filesystem_loader.py  test_function_loader.py  test_function_loader_coverage.py  test_github_issue_6.py  test_github_issue_7.py  test_loader_adapter.py  test_loaders.py  (+11 more)
tests/docs/: BACKWARD_COMPATIBILITY_TESTS.md  INTEGRATION_TESTS.md  OPTIMIZATION_RESULTS.md  PERFORMANCE_TESTS.md  TEST_PLAN.md
