[tool.ruff]
line-length = 88
target-version = "py313"
fix = true
show-fixes = true
output-format = "full"
unsafe-fixes = true

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
ignore = [
    "F821",
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
]
extend-select = [
    "I",
    "C901",
    "D",
]

[tool.ruff.lint.isort]
no-lines-before = [
    "first-party",
]

[tool.ruff.lint.mccabe]
max-complexity = 13

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.black]
target-version = [
    "py312",
]

[tool.creosote]
paths = [
    "jinja2_async_environment",
]
deps-file = "pyproject.toml"
exclude-deps = [
    "pdm-bump",
    "pre-commit",
    "pyyaml",
    "pyfiglet",
    "tomli-w",
    "pytest-timeout",
    "pytest-asyncio",
    "pytest-mock",
    "pytest-cov",
    "pdm",
    "uv",
    "google-crc32c",
    "pytest",
    "autotyping",
]

[tool.refurb]
enable_all = true

[tool.bandit]
target = [
    "jinja2_async_environment",
]
skips = [
    "B403",
    "B404",
    "B311",
    "B301",
    "B607",
    "B603",
    "B602",
    "B704",
    "B101",
]

[tool.pyright]
verboseOutput = true
include = [
    "jinja2_async_environment",
]
exclude = [
    "scratch",
]
extraPaths = [
    ".venv/lib/python3.13/site-packages/",
]
typeCheckingMode = "strict"
reportMissingTypeStubs = false
reportOptionalMemberAccess = false
reportOptionalCall = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportInvalidTypeForm = false
reportUnknownLambdaType = false
reportUnknownParameterType = "warning"
reportPrivateUsage = false
pythonVersion = "3.13"
pythonPlatform = "Darwin"

[tool.codespell]
skip = "*/data/*"
quiet-level = 3
ignore-words-list = "crate,uptodate"

[tool.pytest.ini_options]
addopts = "--cov=jinja2_async_environment --cov-report=term"
asyncio_default_fixture_loop_scope = "function"
python_files = [
    "test_*.py",
    "*_test.py",
]
asyncio_mode = "auto"
testpaths = [
    "tests",
    "jinja2_async_environment",
]
python_classes = [
    "Test*",
]
python_functions = [
    "test_*",
]

[tool.vulture]
min_confidence = 86
paths = [
    "jinja2_async_environment",
]
ignore_names = [
    "cls",
]

[tool.coverage.run]
branch = false
source = [
    "jinja2_async_environment",
]
data_file = ".coverage"
parallel = false
omit = [
    "*/tests/*",
    "*/site-packages/*",
    "*/__pycache__/*",
    "*/__init__.py",
    "*/_version.py",
    "*/conftest.py",
    "*/test_*.py",
    "*/_test.py",
]

[tool.coverage.report]
exclude_also = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
    "except ImportError",
    "def __str__",
    "@abstractmethod",
]
ignore_errors = false

[project]
name = "jinja2-async-environment"
version = "0.11.8"
description = ""
dependencies = [
    "jinja2>=3.1.6",
    "redis>=6.0.0",
    "anyio>=4.9.0",
]
requires-python = ">=3.13"
readme = "README.md"
authors = [
    { name = "lesleslie", email = "les@wedgwoodwebworks.com" },
]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Operating System :: OS Independent",
    "Framework :: FastAPI",
    "Framework :: AsyncIO",
    "Typing :: Typed",
    "License :: OSI Approved :: BSD License",
    "Development Status :: 4 - Beta",
]

[project.license]
text = "BSD-3-Clause"

[project.optional-dependencies]
dev = [
    "crackerjack>=0.18.2",
]

[build-system]
requires = [
    "pdm-backend",
]
build-backend = "pdm.backend"
